Fix Facebook overflow

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -19,6 +19,7 @@ section.facebook-like {
   border-radius: 4px;
   border: 1px solid #ddd;
   height: 260px;
+  overflow: hidden;
 }
 
 section.twitter-widget {
